--- a/platform link/makefile
+++ b/platform link/makefile
@@ -1,2 +1,2 @@
 platform_link: platform_link.c platform_link.h client_socket.c client_socket.h serial.c serial.h
-	gcc -o platform supervisor platform_supervisor.c client_socket.c serial.c
+	gcc -o platform_link platform_link.c client_socket.c serial.c
