--- a/platform supervisor/makefile
+++ b/platform supervisor/makefile
@@ -1,2 +1,2 @@
-platform_supervisor: platform_supervisor.c serial.c
+platform_supervisor: platform_supervisor.c serial.c serial.h
 	gcc -o platform_supervisor platform_supervisor.c serial.c
