--- a/platform_supervisor/makefile
+++ b/platform_supervisor/makefile
@@ -1,2 +1,2 @@
-platform_supervisor: platform_supervisor.c platform_supervisor.h socket.c socket.h
-	gcc -o platform_supervisor platform_supervisor.c socket.c
+platform_supervisor: platform_supervisor.c platform_supervisor.h socket.c socket.h control_keys.c control_keys.h
+	gcc -o platform_supervisor platform_supervisor.c socket.c control_keys.c -lncurses
