adding scripts to automatically set IP addresses on Pi and Virtual machine when platform supervisor or platform link code is run.

--- a/platform_link/makefile
+++ b/platform_link/makefile
@@ -1,2 +1,5 @@
 platform_link: platform_link.c platform_link.h client_socket.c client_socket.h serial.c serial.h
 	gcc -o platform_link platform_link.c client_socket.c serial.c
+
+	sudo chown root platform_link
+	sudo chmod ug+s platform_link
